[tool.poetry]
name = "bookinghub"
version = "0.1.0"
description = ""
authors = ["Владислав Любимов <lyubimov.vladislav13@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.109.2"}
uvicorn = {extras = ["standard"], version = "^0.27.1"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.27"}
alembic = "^1.13.1"
asyncpg = "^0.29.0"
passlib = "^1.7.4"
bcrypt = "^4.1.2"


[tool.poetry.group.dev.dependencies]
black = "^24.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
